# my-buddy

./: .env.example  .env.prod.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COORDINATION.md  DEV-NOTES.md  SERVER-SETUP.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: .gitkeep  env.py
backend/alembic/versions/: 20260704_0001_initial_schema.py  20260704_0002_photos_content_type.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  generate.py  health.py  modules.py  photos.py  projects.py  shop.py
backend/app/claude/: __init__.py  client.py  generation.py  prompts.py  research.py  session_store.py  spec_gate.py
backend/app/models/: __init__.py  tables.py
backend/app/schemas/: __init__.py  dtos.py  spec.py
backend/app/services/: __init__.py  photos.py  projects.py  research.py
backend/app/storage/: __init__.py  base.py  local.py
backend/scripts/: dump_openapi.py  e2e_smoke.py
backend/tests/: test_claude_foundation.py  test_photo_content.py
design/: mocks.html
frontend/: .dockerignore  Dockerfile.prod  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/scripts/: generate-icons.mjs
frontend/src/: main.tsx
frontend/src/api/: README.md  client.ts  hooks.ts  schema.d.ts
frontend/src/app/: App.tsx  router.tsx
frontend/src/offline/: .gitkeep
shared/: openapi.json  project-spec.schema.json
(+65 files in other folders)
