[project]
name = "my-buddy-backend"
version = "0.0.0"
description = "my-buddy backend — FastAPI app (ARCHITECTURE.md §3). Phase 0 scaffold."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.21",
    "psycopg[binary]>=3.2",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
